package edu.guia.solid.isp.adapter;

public interface Printer {
    void print(String data);
}
